# vibe-mono

./: .gitignore  Cargo.toml  Makefile.toml  README.md
.github/: dependabot.yml
.github/rulesets/: default.json
.github/workflows/: language.yml  release.yml
apps/name_placeholder/: Cargo.toml  README.md
docs/: governance.md  index.md  log.md  policy.md
docs/decisions/: index.md
docs/evidence/: docs-self-check.md
docs/guide/: index.md
docs/reference/: index.md  workspace-layout.md
docs/runbook/: index.md  repo-checks.md  template-adoption.md
docs/spec/: cli.md  index.md
src/: cli.rs  main.rs
